RESOLVED FIXED65701
Web Inspector: auto-completion for string literals doesn't work
https://bugs.webkit.org/show_bug.cgi?id=65701
Summary Web Inspector: auto-completion for string literals doesn't work
anton muhin
Reported 2011-08-04 10:20:34 PDT
In console 'a'. does suggest possible completions.
Attachments
Patch (24.73 KB, patch)
2011-08-10 03:03 PDT, Pavel Feldman
yurys: review+
webkit.review.bot: commit-queue-
Pavel Feldman
Comment 1 2011-08-10 03:03:44 PDT
WebKit Review Bot
Comment 2 2011-08-10 03:07:46 PDT
Attachment 103459 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/insp..." exit_code: 1 Source/WebCore/inspector/InjectedScript.cpp:77: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Source/WebCore/inspector/InspectorDebuggerAgent.cpp:398: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Source/WebCore/inspector/InspectorDebuggerAgent.h:107: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Source/WebCore/inspector/InjectedScript.h:79: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Total errors found: 4 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3 2011-08-10 03:29:00 PDT
Comment on attachment 103459 [details] Patch Attachment 103459 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/9340519 New failing tests: inspector/network-status-non-http.html
Yury Semikhatsky
Comment 4 2011-08-10 06:08:20 PDT
Comment on attachment 103459 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=103459&action=review > Source/WebCore/inspector/front-end/ConsoleView.js:427 > + function getCompletions(primitiveType) This must be left as var getCompletions = function... to avoid cluttering inspected global scope with our named functions.
Pavel Feldman
Comment 5 2011-08-10 07:37:48 PDT
Note You need to log in before you can comment on or make changes to this bug.