Web Inspector: auto-completion for string literals doesn't work https://bugs.webkit.org/show_bug.cgi?id=65701

Patch by Pavel Feldman <pfeldman@google.com> on 2011-08-10
Reviewed by Yury Semikhatsky.

Source/WebCore:

* inspector/InjectedScript.cpp:
(WebCore::InjectedScript::evaluateOnCallFrame):
* inspector/InjectedScript.h:
* inspector/InjectedScriptSource.js:
(.):
():
* inspector/Inspector.json:
* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::evaluateOnCallFrame):
* inspector/InspectorDebuggerAgent.h:
* inspector/front-end/ConsoleView.js:
(WebInspector.ConsoleView.prototype._completions.evaluated.getCompletions):
(WebInspector.ConsoleView.prototype._completions.evaluated):
(WebInspector.ConsoleView.prototype._completions.receivedPropertyNamesFromEval):
(WebInspector.ConsoleView.prototype._completions.receivedPropertyNames):
(WebInspector.ConsoleView.prototype._completions):
(WebInspector.ConsoleView.prototype.evalInInspectedWindow):
* inspector/front-end/DebuggerPresentationModel.js:
(WebInspector.PresenationCallFrame.prototype.evaluate):
* inspector/front-end/RemoteObject.js:
(WebInspector.RemoteObject):
* inspector/front-end/ScriptsPanel.js:
(WebInspector.ScriptsPanel.prototype.evaluateInSelectedCallFrame):
(WebInspector.SourceFrameDelegateForScriptsPanel.prototype.evaluateInSelectedCallFrame):

LayoutTests:

* inspector/debugger/debugger-completions-on-call-frame-expected.txt:
* inspector/debugger/debugger-completions-on-call-frame.html:

Canonical link: https://commits.webkit.org/81842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92768 268f45cc-cd09-0410-ab3c-d52691b4dbfc