Source/WebCore/inspector/InjectedScript.h
@@ -69,7 +69,15 @@ public:
                         bool returnByValue,
                         RefPtr<InspectorObject>* result,
                         bool* wasThrown);
-    void evaluateOnCallFrame(ErrorString*, const ScriptValue& callFrames, const String& callFrameId, const String& expression, const String& objectGroup, bool includeCommandLineAPI, RefPtr<InspectorObject>* result, bool* wasThrown);
+    void evaluateOnCallFrame(ErrorString*,
+                             const ScriptValue& callFrames,
+                             const String& callFrameId,
+                             const String& expression,
+                             const String& objectGroup,
+                             bool includeCommandLineAPI,
+                             bool returnByValue,
+                             RefPtr<InspectorObject>* result,
+                             bool* wasThrown);
     void getProperties(ErrorString*, const String& objectId, bool ownProperties, RefPtr<InspectorArray>* result);
     Node* nodeForObjectId(const String& objectId);
     void releaseObject(const String& objectId);
