Source/WebCore/inspector/front-end/RemoteObject.js
@@ -38,7 +38,8 @@ WebInspector.RemoteObject = function(objectId, type, subtype, value, description
         this._description = description;
         this._hasChildren = true;
     } else {
-        // Primitive
+        // Primitive or null object.
+        console.assert(type !== "object" || value === null);
         this._description = description || (value + "");
         this._hasChildren = false;
     }
